Fix an alignment issue under the OS X native "macintosh" style

REVIEW: 128004
BUG: 339670
Committed from host : Portia.local